--- a/Project1/views/display.mustache
+++ b/Project1/views/display.mustache
@@ -54,13 +54,13 @@
 					<th scope="col">Character Name</th>
 					<th scope="col">Token</th>
 					<th scope="col">Class</th>
-					<th scope="col">Strength</th>
-					<th scope="col">Dexterity</th>
-					<th scope="col">Constitution</th>
-					<th scope="col">Wisdom</th>
-					<th scope="col">Intelligence</th>
-					<th scope="col">Charisma</th>
-					<th scope="col">Level</th>
+					<th scope="col"><a href="?sort=Strength&order=asc">↑</a> Strength <a href="?sort=Strength&order=desc">↓</a></th>
+					<th scope="col"><a href="?sort=Dexterity&order=asc">↑</a> Dexterity <a href="?sort=Dexterity&order=desc">↓</a></th>
+					<th scope="col"><a href="?sort=Constitution&order=asc">↑</a> Constitution <a href="?sort=Constitution&order=desc">↓</a></th>
+					<th scope="col"><a href="?sort=Wisdom&order=asc">↑</a> Wisdom <a href="?sort=Wisdom&order=desc">↓</a></th>
+					<th scope="col"><a href="?sort=Intelligence&order=asc">↑</a> Intelligence <a href="?sort=Intelligence&order=desc">↓</a></th>
+					<th scope="col"><a href="?sort=Charisma&order=asc">↑</a> Charisma <a href="?sort=Charisma&order=desc">↓</a></th>
+					<th scope="col"><a href="?sort=Level&order=asc">↑</a> Level <a href="?sort=Level&order=desc">↓</a></th>
 					<th scope="col"></th>
 				</tr>
 			</thead>
